--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22",
     "cors": "^2.8.5",
-    "mongoose": "^7.2.1"
+    "dotenv": "^16.1.4",
+    "express": "^4.18.2",
+    "mongoose": "^7.2.1",
+    "nodemon": "^2.0.22"
   },
   "scripts": {
     "serve": "nodemon index.js"
