--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_CONNECTION = "mongodb+srv://kumuthac23:nSzJgw0fGNnWOBUL@cluster0.ukhv5dg.mongodb.net/Ecommerce"
+MONGODB_CONNECTION = "mongodb+srv://sathyapraba48:JpOUGNZvQ4lQmNsS@cluster0.snn0ctw.mongodb.net/Ecommerce"
