--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "mongoose-unique-validator": "^4.0.0",
-    "nodemon": "^2.0.22"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.22",
+    "papaparse": "^5.4.1"
   },
   "scripts": {
-    "serve": "node index.js"
+    "serve": "nodemon index.js"
   }
 }
