--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "mongoose": "^7.2.2",
     "mongoose-unique-validator": "^4.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22",
-    "papaparse": "^5.4.1"
+    "nodemon": "^2.0.22"
   },
   "scripts": {
     "serve": "nodemon index.js"
